--- a/streams/api-server/.gitignore
+++ b/streams/api-server/.gitignore
@@ -1,17 +1,15 @@
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-/.idea
-/.git
 # dependencies
-./streams/node_modules
-./api-server/node_modules
+/node_modules
+/.pnp
+.pnp.js
 
 # testing
 /coverage
 
-
 # production
 /build
-
 
 # misc
 .DS_Store
@@ -19,10 +17,6 @@
 .env.development.local
 .env.test.local
 .env.production.local
-
-#.eslintcache
-streams/client/.eslintcache
-api-server/.eslintcache
 
 npm-debug.log*
 yarn-debug.log*
